Added env variables

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-DEMO_MODE=false
+CACHE_REDIS_HOST=tcp://localhost:6379
+API_JOURNAL_HOST=https://api.thejournal.ie
+API_JOURNAL_AUTH_USER=codetest
+API_JOURNAL_AUTH_PASSWORD=AQJl5jewY2lZkrJpiT1cCJkj1tLPn64R
